# bazel-talk-2023

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  USEFUL_STUFF.md  WORKSPACE.bazel
cmd/myapp2/: BUILD.bazel  main.go
cmd/myapp2/internal/: BUILD.bazel
phase1/: .bazelignore  BUILD.bazel  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-phase1  bazel-testlogs  go.mod  go_deps.bzl
phase1/cmd/myapp1/: BUILD.bazel  main.go
phase1/cmd/myapp1/internal/: BUILD.bazel
phase1/cmd/myapp2/: BUILD.bazel  main.go
phase1/cmd/myapp2/internal/: BUILD.bazel
phase2/: .bazelrc  BUILD.bazel  Makefile  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-phase2  bazel-testlogs
phase2/cmd/myapp1/: BUILD.bazel  main.go
phase2/cmd/myapp1/internal/: BUILD.bazel  app.go
phase2/cmd/myapp2/: BUILD.bazel  main.go
phase2/cmd/myapp2/internal/: BUILD.bazel  app.go
