load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/whizard/bazel-talk-2023/phase1/cmd/myapp2",
    visibility = ["//visibility:private"],
    deps = ["//cmd/myapp2/internal:go_default_library"],
)

go_binary(
    name = "myapp2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
