load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/whizard/bazel-talk-2023/phase2/cmd/myapp1",
    visibility = ["//visibility:private"],
    deps = ["//cmd/myapp1/internal:go_default_library"],
)

go_binary(
    name = "myapp1",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "myapp1_linux",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@distroless_base//image",
    entrypoint = ["/myapp1_linux"],
    files = [":myapp1_linux"],
    ports = ["8080"],
    repository = "docker.io/pmackay/bazel-talk-2023",
)

container_push(
    name = "image_push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "pmackay/bazel-talk-2023",
    skip_unchanged_digest = True,
    tag_file = "image.json.sha256",
)
